# MGARD-XGC

./: CMakeLists.txt  average.cpp  cmake_cmd.txt  convert_rz_d.py  err_analysis.py  err_analysis_buff.py  qoi_dump.py  qoi_evaluate.py  simple_ad_read.cpp  test_nonuniform.cpp  test_xgc.cpp  test_xgc_3d.cpp  test_xgc_4d_non.cpp  test_xgc_5d.cpp  test_xgc_by_surface.cpp  test_xgc_by_surface_3d.cpp  test_xgc_nonuniform.cpp  test_xgc_nonuniform_fls.cpp  xgc4py.py  xgc_3d_plot.py  xgc_preprocess.py
xgc4py/: XGC.py
